    - significantly improved query performance
    - allow use of negation in conditions
    - new 'net' attribute allows querying 'dnet' and 'snet' simultaneously
    - new 'host' attribute allows querying 'sip' and 'dip' simultaneously
    - 'src' is an alias for 'sip' and 'dst' is an alias for 'dip'
    - Influx DB output format (use '-e influxdb')
    - support for name resolution in conditions
    - support for reverse DNS for output IPs
    - query multiple interfaces by giving commma separated list of interfaces to -i
    - query all interfaces for which there is data by specifying '-i ANY'
    - add unit and system (i.e. output consistency) tests
    - extensive bash completion with support for condition grammar, interface names, query types, ...

v2.1.0 fako1024,els0r
    - code refresh from Open Systems (functionality additions to query tool)
    - upgrade to libpcap 1.9.0 and gopacket 1.1.15
    - remove layer 7 detection and all its dependencies (libprotoident, libtrace) - drastic improvements to compilation speed and system resource usage footprint
    - static inclusion of precompiled lz4 library

v2.1.1 els0r
	- included static lz4 libraries and protocols list for darwin (coincides with /etc/protocols on FreeBSD). goQuery is buildable on MAC OS X now
	- fixed e2e tests which were still testing for Layer 7

UNRELEASED fako1024,els0r
    - replace all occurrences of github.com/google/gopacket imports with forked repo under github.com/fako1024/gopacket
    - remove obsolete patches and markers for gopacket / pcap dependencies
    - start fetching fako's gopacket via go get
    - get rid of fetching golang, effectively making a go installation a pre-requisite
    - remove all mentions of libpcap from the repository
    - improve packaging and add .deb Makefile target
    - Add explicit systemd timeout for stop target to ensure that a stalling goprobe is killed
    - Fix a bug occurring with ASM implementation of bigendian conversion starting from go1.15