@@ -59,3 +59,4 @@ UNRELEASED fako1024,els0r
     - improve packaging and add .deb Makefile target
     - Add explicit systemd timeout for stop target to ensure that a stalling goprobe is killed
     - Fix a bug occurring with ASM implementation of bigendian conversion starting from go1.15
+    - Add file magic and support for configurable compression algorithms
